--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
-<body>
-<h1>Hello World</h1>
-<p>I'm hosted with GitHub Pages.</p>
-</body>
+    <body>
+        <h1>Hello! I'm An Vo</h1>
+        <p>I'm a Computer Science student at the University of Oregon, and this is my personal website.</p>
+    </body>
 </html>
