--- a/index.html
+++ b/index.html
@@ -1,7 +1,44 @@
-<!DOCTYPE html>
+<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"
+"http://www.w3.org/TR/html4/loose.dtd">
 <html>
-    <body>
-        <h1>Hello! I'm An Vo</h1>
-        <p>I'm a Computer Science student at the University of Oregon, and this is my personal website.</p>
-    </body>
+<head>
+<meta http-equiv="Content-Type" content="text/html;charset=utf-8" >
+
+<title>An Vo's Personal site</title>
+</head>
+<body>
+<h1>Personal Site</h1>
+<P>
+<h1>An Vo</h1>
+<P>
+<h2>Residential Information</h2>
+Name: Jane Doe<br>
+Major/Minor: *MAJOR* / *MINOR*<br>
+Address:  1554 Whatever St. <br>
+	  Eugene, OR<br>
+Home Phone number: OPTIONAL<br>
+Campus Phone number: OPTIONAL<br>
+<hr>
+<h2>Classes List</h2>
+<table>
+<thead>
+<tr><td>Class</td><td>Name</td><td>Meets</td></tr>
+</thead>
+<tr><td>CS210</td><td>Intro to Computer Science</td><td>Whenever</td></tr>
+<tr><td>SAMPL</td><td>Sample class</td><td>TWF 2-3:30</td></tr>
+</table>
+
+<hr>
+<h2>Hobbies / Interests</h2>
+<ul>
+<li>Aquatic container construction.</li>
+<li>Llama herding.</li>
+<li>New age punk jazz.</li>
+</ul>
+<hr>
+<p>
+    <a href="http://validator.w3.org/check?uri=referer"><img
+      src="http://www.w3.org/Icons/valid-html401" alt="Valid HTML 4.01 Transitional" height="31" width="88"></a>
+</p>
+</body>
 </html>
