--- a/index.html
+++ b/index.html
@@ -9,15 +9,28 @@
     <h1>Personal Site</h1>
 
     <h1>An Vo</h1>
-
-    <h2>Residential Information</h2>
     <p>
-        Name: Jane Doe<br>
-        Major/Minor: *MAJOR* / *MINOR*<br>
-        Address: 1554 Whatever St.<br>
+        Links: <a href="mailto:ovnaa05@gmail.com">Email</a>
+        <a href="https://www.linkedin.com/in/an-vo-225675237/">LinkedIn</a>
+        <a href="https://github.com/anvovn">GitHub</a>
+    </p>
+
+    <h2>Information</h2>
+    <p>
+        <u>Major/Minor:</u> Computer Science / Math <br>
+        <u>Interest(s):</u> High Performance Computing <br>
+        <u>Languages/Frameworks/Tools:</u> Python, C/C++, Swift, Git <br>
+        <!-- Address: 1554 Whatever St.<br>
         Eugene, OR<br>
-        Home Phone number: OPTIONAL<br>
-        Campus Phone number: OPTIONAL
+        Home Phone number: 971-470-1643<br>
+        -->
+    </p>
+    <hr>
+    <h2>Projects</h2>
+    <p>
+        <b>MNIST</b> - The "hello world" of AI projects. I trained a machine learning model
+        to recognize handwritten numbers to roughly 90% accuracy.
+
     </p>
 
     <hr>
@@ -27,42 +40,54 @@
         <thead>
             <tr>
                 <td>Class</td>
-                <td>Name</td>
-                <td>Meets</td>
+                <td>Name </td>
             </tr>
         </thead>
         <tbody>
             <tr>
                 <td>CS210</td>
-                <td>Intro to Computer Science</td>
-                <td>Whenever</td>
+                <td>Computer Science I</td>
             </tr>
             <tr>
-                <td>SAMPL</td>
-                <td>Sample class</td>
-                <td>TWF 2-3:30</td>
+                <td>CS211</td>
+                <td>Computer Science II</td>
+            </tr>
+            <tr>
+                <td>CS212</td>
+                <td>Computer Science III</td>
+            </tr>
+            <tr>
+                <td>CS313</td>
+                <td>Intermediate Data Structures</td>
+            </tr>
+            <tr>
+                <td>CS314</td>
+                <td>Computer Organization</td>
+            </tr>
+            <tr>
+                <td>CS315</td>
+                <td>Intermediate Algorithms</td>
+            </tr>
+            <tr>
+                <td>CS330</td>
+                <td>C/C++ & Unix</td>
+            </tr>
+            <tr>
+                <td>CS407</td>
+                <td>CS Career & Internship Seminar</td>
             </tr>
         </tbody>
     </table>
 
     <hr>
 
-    <h2>Hobbies / Interests</h2>
+    <h2>Hobbies</h2>
     <ul>
-        <li>Aquatic container construction.</li>
-        <li>Llama herding.</li>
-        <li>New age punk jazz.</li>
+        <li>Powerlifting/weightlifting</li>
+        <li>Football</li>
+        <li>Competitive gaming</li>
+        
     </ul>
 
-    <hr>
-
-    <p>
-        <a href="http://validator.w3.org/check?uri=referer">
-            <img src="http://www.w3.org/Icons/valid-html401" 
-                 alt="Valid HTML 4.01 Transitional" 
-                 height="31" 
-                 width="88">
-        </a>
-    </p>
 </body>
 </html>
