--- a/index.html
+++ b/index.html
@@ -4,11 +4,13 @@
 <head>
     <meta http-equiv="Content-Type" content="text/html;charset=utf-8">
     <title>An Vo's Personal Site</title>
+
 </head>
 <body>
     <h1>Personal Site</h1>
 
     <h1>An Vo</h1>
+    <img src="https://media.discordapp.net/attachments/536726248291041290/1374862761816887396/IMG_3374.jpg?ex=682f983a&is=682e46ba&hm=f413f3341ece51159d2941c3ac41e9f23d8b683d2b26dc70c0337d2f93a7cddd&=&format=webp&width=256&height=256"> 
     <p>
         Links: <a href="mailto:ovnaa05@gmail.com">Email</a>
         <a href="https://www.linkedin.com/in/an-vo-225675237/">LinkedIn</a>
