--- a/index.html
+++ b/index.html
@@ -7,14 +7,24 @@
     <link rel="stylesheet" href="styles.css"/>
 </head>
 <body>
-    <h1>Personal Site</h1>
 
-    <h1>An Vo</h1>
+    <u>
+        <li><a href="#home">Home</a></li>
+        <li><a href="#info">Info</a></li>
+        <li><a href="#projects">Projects</a></li>
+        <li><a href="#contact">Contact Me</a></li>
+    </u>
+
     <p>
-        Links: <a href="mailto:ovnaa05@gmail.com">Email</a>
+        <a href="mailto:ovnaa05@gmail.com">Email</a>
         <a href="https://www.linkedin.com/in/an-vo-225675237/">LinkedIn</a>
         <a href="https://github.com/anvovn">GitHub</a>
     </p>
+
+</body>
+</html>
+
+<!-- Archive
 
     <h2>Information</h2>
     <p>
@@ -84,7 +94,4 @@
         <li>Football</li>
         <li>Competitive gaming</li>
         
-    </ul>
-
-</body>
-</html>
+    </ul> -->
