--- a/index.html
+++ b/index.html
@@ -8,18 +8,60 @@
 </head>
 <body>
 
-    <u>
-        <li><a href="#home">Home</a></li>
-        <li><a href="#info">Info</a></li>
+    <div class="navbar">
+        <li><a href="#">About Me</a></li>
         <li><a href="#projects">Projects</a></li>
-        <li><a href="#contact">Contact Me</a></li>
-    </u>
+        <li><a href="#connect">Connect</a></li>
+    </div>
 
-    <p>
+    <!-- <p>
         <a href="mailto:ovnaa05@gmail.com">Email</a>
         <a href="https://www.linkedin.com/in/an-vo-225675237/">LinkedIn</a>
         <a href="https://github.com/anvovn">GitHub</a>
-    </p>
+    </p> -->
+
+
+    <div id="">
+        <h3 class="hidden">test</h3> <!-- Spacing between navbar and content -->
+        <h1> Personal Website</h1>
+    </div>
+    
+    <p>test</p>
+    <p>test</p>
+    <p>test</p>
+    <p>test</p>
+    <p>test</p>
+    <p>test</p>
+    <p>test</p>
+    <p>test</p>
+    <p>test</p>
+    <p>test</p>
+    <p>test</p>
+    <p>test</p>
+    <p>test</p>
+    <p>test</p>
+    <p>test</p>
+
+    <div id="projects">
+        <p>test</p>
+        <p>test</p>
+        <p>test</p>
+    </div>
+
+    <p>test</p>
+    <p>test</p>
+    <p>test</p>
+    <p>test</p>
+    <p>test</p>
+    <p>test</p>
+    <p>test</p>
+    <p>test</p>
+    <p>test</p>
+    <p>test</p>
+    <p>test</p>
+    <p>test</p>
+    <p>test</p>
+    <p>test</p>
 
 </body>
 </html>
