--- a/index.html
+++ b/index.html
@@ -3,13 +3,15 @@
 <html>
 <head>
     <meta http-equiv="Content-Type" content="text/html;charset=utf-8">
-    <title>An's Personal Site</title>
+    <title>An | CS @ UOregon</title>
     <link rel="stylesheet" href="styles.css"/>
+    <script src="/app.js"></script>
 </head>
 <body>
 
     <div class="navbar">
-        <li><a href="#">About Me</a></li>
+
+        <li><a href="#">Home</a></li>
         <li><a href="#projects">Projects</a></li>
         <li><a href="#connect">Connect</a></li>
     </div>
@@ -20,10 +22,13 @@
         <a href="https://github.com/anvovn">GitHub</a>
     </p> -->
 
-
-    <div id="">
-        <h3 class="hidden">test</h3> <!-- Spacing between navbar and content -->
-        <h1> Personal Website</h1>
+    <div id="" class="home">
+        <div class="home-text">
+            <h3 class="hidden">test</h3> <!-- Spacing between navbar and content -->
+            <h1> Hello, my name is An</h1>
+            <p></p>
+        </div>
+        <img src="imgs/me.jpg" class="home-img"> 
     </div>
     
     <p>test</p>
