--- a/index.html
+++ b/index.html
@@ -26,7 +26,9 @@
         <div class="home-text">
             <h3 class="hidden">test</h3> <!-- Spacing between navbar and content -->
             <h1> Hello, my name is An</h1>
-            <p></p>
+            <p>I'm a Computer Science student at the University of Oregon and minoring
+                in Mathematics.
+            </p>
         </div>
         <img src="imgs/me.jpg" class="home-img"> 
     </div>
