--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                 in Mathematics.
             </p>
         </div>
-        <img src="imgs/me.jpg" class="home-img"> 
+        <img src="imgs/gihun.jpg" class="home-img"> 
     </div>
     
     <p>test</p>
