--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html>
 <head>
     <meta http-equiv="Content-Type" content="text/html;charset=utf-8">
-    <title>An | CS @ UOregon</title>
+    <title>An Vo | Site</title>
     <link rel="stylesheet" href="styles.css"/>
     <script src="/app.js"></script>
 </head>
