--- a/index.html
+++ b/index.html
@@ -30,31 +30,18 @@
                 in Mathematics.
             </p>
         </div>
-        <img src="imgs/gihun.jpg" class="home-img"> 
+        <img src="imgs/me.jpg" class="home-img"> 
     </div>
     
     <p>test</p>
     <p>test</p>
     <p>test</p>
     <p>test</p>
-    <p>test</p>
-    <p>test</p>
-    <p>test</p>
-    <p>test</p>
-    <p>test</p>
-    <p>test</p>
-    <p>test</p>
-    <p>test</p>
-    <p>test</p>
-    <p>test</p>
-    <p>test</p>
-
     <div id="projects">
         <p>test</p>
         <p>test</p>
         <p>test</p>
     </div>
-
     <p>test</p>
     <p>test</p>
     <p>test</p>
@@ -64,6 +51,20 @@
     <p>test</p>
     <p>test</p>
     <p>test</p>
+    <p>test</p>
+    <p>test</p>
+    <p>test</p>
+    <p>test</p>
+    <p>test</p>
+    <p>test</p>
+    <p>test</p>
+    <p>test</p>
+    <p>test</p>
+    <p>test</p>
+    <p>test</p>
+     <div id="connect">
+        <p>Let's Connect</p>
+    </div>
     <p>test</p>
     <p>test</p>
     <p>test</p>
