--- a/index.html
+++ b/index.html
@@ -10,7 +10,6 @@
 <body>
 
     <div class="navbar">
-
         <li><a href="#">Home</a></li>
         <li><a href="#projects">Projects</a></li>
         <li><a href="#connect">Connect</a></li>
@@ -25,7 +24,7 @@
     <div id="" class="home">
         <div class="home-text">
             <h3 class="hidden">test</h3> <!-- Spacing between navbar and content -->
-            <h1> Hello, my name is An</h1>
+            <h1> Hello, my name is An.</h1>
             <p>I'm a Computer Science student at the University of Oregon and minoring
                 in Mathematics.
             </p>
