--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 
     <div class="navbar">
         <li><a href="#">Home</a></li>
+        <li><a href="#skills">Skills | About Me</a></li>
         <li><a href="#projects">Projects</a></li>
         <li><a href="#connect">Connect</a></li>
     </div>
@@ -32,43 +33,95 @@
         <img src="imgs/me.jpg" class="home-img"> 
     </div>
     
-    <p>test</p>
-    <p>test</p>
-    <p>test</p>
-    <p>test</p>
-    <div id="projects">
-        <p>test</p>
-        <p>test</p>
-        <p>test</p>
+    <p>...</p>
+    <p>...</p>
+    <p>...</p>
+    <p>...</p>
+    <p>...</p>
+    <p>...</p>
+    <p>...</p>
+    <p>...</p>
+    <p>...</p>
+    <p>...</p>
+    <p>...</p>
+    <p>...</p>
+    <div id="skills" class="skills">
+        <h2 class="hidden">test</h2> <!-- Spacing between navbar and content -->
+        <h2 class="hidden">test</h2>
+        <h1>About Me</h1>
     </div>
-    <p>test</p>
-    <p>test</p>
-    <p>test</p>
-    <p>test</p>
-    <p>test</p>
-    <p>test</p>
-    <p>test</p>
-    <p>test</p>
-    <p>test</p>
-    <p>test</p>
-    <p>test</p>
-    <p>test</p>
-    <p>test</p>
-    <p>test</p>
-    <p>test</p>
-    <p>test</p>
-    <p>test</p>
-    <p>test</p>
-    <p>test</p>
-    <p>test</p>
-     <div id="connect">
-        <p>Let's Connect</p>
+    <p>...</p>
+    <p>...</p>
+    <p>...</p>
+    <p>...</p>
+    <p>...</p>
+    <p>...</p>
+    <p>...</p>
+    <p>...</p>
+    <p>...</p>
+    <p>...</p>
+    <p>...</p>
+    <p>...</p>
+    <p>...</p>
+    <p>...</p>
+    <p>...</p>
+    <p>...</p>
+    <p>...</p>
+    <p>...</p>
+    <p>...</p>
+    <p>...</p>
+    <p>...</p>
+    <p>...</p>
+    <div id="projects" class="projects">
+        <h2 class="hidden">test</h2> <!-- Spacing between navbar and content -->
+        <h2 class="hidden">test</h2>
+        <h1>Projects</h1>
     </div>
-    <p>test</p>
-    <p>test</p>
-    <p>test</p>
-    <p>test</p>
-    <p>test</p>
+    <p>...</p>
+    <p>...</p>
+    <p>...</p>
+    <p>...</p>
+    <p>...</p>
+    <p>...</p>
+    <p>...</p>
+    <p>...</p>
+    <p>...</p>
+    <p>...</p>
+    <p>...</p>
+    <p>...</p>
+    <p>...</p>
+    <p>...</p>
+    <p>...</p>
+    <p>...</p>
+    <p>...</p>
+    <p>...</p>
+    <p>...</p>
+    <p>...</p>
+    <div id="connect" class="connect">
+        <h2 class="hidden">test</h2> <!-- Spacing between navbar and content -->
+        <h2 class="hidden">test</h2>
+        <h1>Let's Connect</h1>
+    </div>
+    <p>...</p>
+    <p>...</p>
+    <p>...</p>
+    <p>...</p>
+    <p>...</p>
+    <p>...</p>
+    <p>...</p>
+    <p>...</p>
+    <p>...</p>
+    <p>...</p>
+    <p>...</p>
+    <p>...</p>
+    <p>...</p>
+    <p>...</p>
+    <p>...</p>
+    <p>...</p>
+    <p>...</p>
+    <p>...</p>
+    <p>...</p>
+    <p>...</p>
 
 </body>
 </html>
