--- a/index.html
+++ b/index.html
@@ -5,16 +5,15 @@
     <meta http-equiv="Content-Type" content="text/html;charset=utf-8">
     <title>An Vo | Site</title>
     <link rel="stylesheet" href="styles.css"/>
-    <script src="/app.js"></script>
 </head>
 <body>
 
-    <div class="navbar">
+    <ul class="navbar">
         <li><a href="#">Home</a></li>
         <li><a href="#skills">Skills | About Me</a></li>
         <li><a href="#projects">Projects</a></li>
         <li><a href="#connect">Connect</a></li>
-    </div>
+    </ul>
 
     <!-- <p>
         <a href="mailto:ovnaa05@gmail.com">Email</a>
@@ -22,7 +21,7 @@
         <a href="https://github.com/anvovn">GitHub</a>
     </p> -->
 
-    <div id="" class="home">
+    <div id="home" class="home">
         <div class="home-text">
             <h3 class="hidden">test</h3> <!-- Spacing between navbar and content -->
             <h1> Hello, my name is An.</h1>
@@ -123,6 +122,7 @@
     <p>...</p>
     <p>...</p>
 
+    <script src="app.js"></script>
 </body>
 </html>
 
