--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="Content-Type" content="text/html;charset=utf-8">
     <title>An Vo | Site</title>
     <link rel="stylesheet" href="styles.css"/>
+    <script defer src="app.js"></script>
 </head>
 <body>
 
@@ -20,18 +21,15 @@
         <a href="https://www.linkedin.com/in/an-vo-225675237/">LinkedIn</a>
         <a href="https://github.com/anvovn">GitHub</a>
     </p> -->
-
-    <div id="home" class="home">
+    <section class="home">
         <div class="home-text">
-            <h3 class="hidden">test</h3> <!-- Spacing between navbar and content -->
             <h1> Hello, my name is An.</h1>
             <p>I'm a Computer Science student at the University of Oregon and minoring
                 in Mathematics.
             </p>
         </div>
         <img src="imgs/me.jpg" class="home-img"> 
-    </div>
-    
+    </section>
     <p>...</p>
     <p>...</p>
     <p>...</p>
@@ -44,11 +42,9 @@
     <p>...</p>
     <p>...</p>
     <p>...</p>
-    <div id="skills" class="skills">
-        <h2 class="hidden">test</h2> <!-- Spacing between navbar and content -->
-        <h2 class="hidden">test</h2>
+    <section id="skills" class="hidden">
         <h1>About Me</h1>
-    </div>
+    </section>
     <p>...</p>
     <p>...</p>
     <p>...</p>
@@ -71,11 +67,9 @@
     <p>...</p>
     <p>...</p>
     <p>...</p>
-    <div id="projects" class="projects">
-        <h2 class="hidden">test</h2> <!-- Spacing between navbar and content -->
-        <h2 class="hidden">test</h2>
+    <section id="projects" class="hidden">
         <h1>Projects</h1>
-    </div>
+    </section>
     <p>...</p>
     <p>...</p>
     <p>...</p>
@@ -96,11 +90,9 @@
     <p>...</p>
     <p>...</p>
     <p>...</p>
-    <div id="connect" class="connect">
-        <h2 class="hidden">test</h2> <!-- Spacing between navbar and content -->
-        <h2 class="hidden">test</h2>
+    <section id="connect" class="hidden">
         <h1>Let's Connect</h1>
-    </div>
+    </section>
     <p>...</p>
     <p>...</p>
     <p>...</p>
@@ -121,8 +113,6 @@
     <p>...</p>
     <p>...</p>
     <p>...</p>
-
-    <script src="app.js"></script>
 </body>
 </html>
 
