--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <a href="https://www.linkedin.com/in/an-vo-225675237/">LinkedIn</a>
         <a href="https://github.com/anvovn">GitHub</a>
     </p> -->
-    <section class="home">
+    <section class="home hidden">
         <div class="home-text">
             <h1> Hello, my name is An.</h1>
             <p>I'm a Computer Science student at the University of Oregon and minoring
@@ -30,18 +30,7 @@
         </div>
         <img src="imgs/me.jpg" class="home-img"> 
     </section>
-    <p>...</p>
-    <p>...</p>
-    <p>...</p>
-    <p>...</p>
-    <p>...</p>
-    <p>...</p>
-    <p>...</p>
-    <p>...</p>
-    <p>...</p>
-    <p>...</p>
-    <p>...</p>
-    <p>...</p>
+    
     <section id="skills" class="hidden">
         <h1>About Me</h1>
     </section>
