--- a/connect.html
+++ b/connect.html
@@ -18,6 +18,19 @@
 
     <section id="connect" class="hidden">
         <h1>Let's Connect</h1>
+
+        <div class="rsocials">
+            <div class="csocials">
+                <a href="https://github.com/anvovn" target="_blank">
+                    <img src="imgs/github.png" alt="github">
+                </a>
+            </div>
+            <div class="csocials">
+                <a href="https://www.linkedin.com/in/an-vo-225675237/" target="_blank">
+                    <img src="imgs/linkedin.png" alt="linkedin">
+                </a>
+            </div>
+        </div> 
     </section>
     
 </body>
