--- a/projects.html
+++ b/projects.html
@@ -18,6 +18,18 @@
 
     <section id="projects" class="hidden">
         <h1>Projects</h1>
+    
+        <div class="rprojects">
+            <div class="cprojects">
+                <p id="projectembeds">test</p>
+            </div>
+            <div class="cprojects">
+                <p id="projectembeds">test</p>
+            </div>
+            <div class="cprojects">
+                <p id="projectembeds">test</p>
+            </div>
+        </div> 
     </section>
     
 </body>
