--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <li><a href="connect.html">Connect</a></li>
     </ul>
 
-    <section id="home" class="home hidden">
+    <section id="home" class="hidden">
         <div class="home-content">
             <div class="home-text">
                 <h1> Hello, my name is An.</h1>
