--- a/projects.html
+++ b/projects.html
@@ -16,21 +16,37 @@
         <li><a href="connect.html">Connect</a></li>
     </ul>
 
-    <section id="projects" class="hidden">
-        <h1>Projects</h1>
-    
-        <div class="rprojects">
-            <div class="cprojects">
-                <p id="projectembeds">test</p>
+    <section id="projects">
+        <h1 class="title">Projects</h1>
+
+        <div class="grid">
+            <div class="project-card">
+            <img src="imgs/website.png" alt="Project screenshot" class="project-img">
+            <div class="project-content">
+                <h2 class="project-name">Personal Website</h2>
+                <p>A simple and intuitive website using HTML, CSS and Javascript.</p>
+                <div class="project-tags">
+                    <span>HTML</span>
+                    <span>CSS</span>
+                    <span>Javascript</span>
+                </div>
+                <a href="#" class="project-link">View Project Details</a>
             </div>
-            <div class="cprojects">
-                <p id="projectembeds">test</p>
             </div>
-            <div class="cprojects">
-                <p id="projectembeds">test</p>
+
+            <div class="project-card">
+            <img src="imgs/hpc.jpg" alt="Project screenshot" class="project-img">
+            <div class="project-content">
+                <h2 class="project-name">Parallelized SpMV</h2>
+                <p>Parallelization of sparse matrix vector multiplication using the OpenMP library.</p>
+                <div class="project-tags">
+                    <span>C</span>
+                </div>
+                <a href="#" class="project-link">View Project Details</a>
             </div>
-        </div> 
-    </section>
+            </div>
+        </div>
+        </section>
     
 </body>
 </html>
