--- a/projects.html
+++ b/projects.html
@@ -16,7 +16,7 @@
         <li><a href="connect.html">Connect</a></li>
     </ul>
 
-    <section id="projects">
+    <section id="projects" class="hidden">
         <h1 class="title">Projects</h1>
 
         <div class="grid">
@@ -45,6 +45,18 @@
                 <a href="#" class="project-link">View Project Details</a>
             </div>
             </div>
+
+            <div class="project-card">
+            <div class="project-content">
+                <h2 class="project-name">Coming soon</h2>
+                <p>More in the works...</p>
+                <div class="project-tags">
+                    
+                </div>
+                <a href="#" class="project-link">View Project Details</a>
+            </div>
+            </div>
+
         </div>
         </section>
     
