--- a/index.html
+++ b/index.html
@@ -28,7 +28,41 @@
 
     </section>
 
+    <section id="skills" class="hidden">
+        <h2 class="title">Skills</h2>
+        <div class="skills-wheel">
+            <ul id="skills-list">
+            <li>JavaScript</li>
+            <li>Python</li>
+            <li>C++</li>
+            <li>React</li>
+            <li>Node.js</li>
+            <li>SQL</li>
+            <li>HTML & CSS</li>
+            </ul>
+        </div>
+    </section>
 
+    <section id="experience" class="hidden">
+        <h2 class="title">Experience</h2>
+        <div class="timeline">
+            <div class="timeline-item">
+                <div class="timeline-content">
+                    <h3>Software Engineer Intern</h3>
+                    <p class="short">Company A — Summer 2023</p>
+                    <p class="details">Worked on full-stack features, optimized database queries, and improved API latency by 20%.</p>
+                </div>
+            </div>
+
+            <div class="timeline-item">
+                <div class="timeline-content">
+                    <h3>Teaching Assistant</h3>
+                    <p class="short">University — 2022–2023</p>
+                    <p class="details">Led weekly lab sessions, graded assignments, and helped students understand algorithms.</p>
+                </div>
+            </div>
+        </div>
+    </section>
     
 </body>
 </html>
