--- a/index.html
+++ b/index.html
@@ -28,42 +28,41 @@
 
     </section>
 
-    <section id="skills" class="hidden">
-        <h2 class="title">Skills</h2>
-        <div class="skills-wheel">
-            <ul id="skills-list">
-            <li>JavaScript</li>
-            <li>Python</li>
-            <li>C++</li>
-            <li>React</li>
-            <li>Node.js</li>
-            <li>SQL</li>
-            <li>HTML & CSS</li>
-            </ul>
-        </div>
-    </section>
-
     <section id="experience" class="hidden">
         <h2 class="title">Experience</h2>
         <div class="timeline">
             <div class="timeline-item">
                 <div class="timeline-content">
-                    <h3>Software Engineer Intern</h3>
-                    <p class="short">Company A — Summer 2023</p>
-                    <p class="details">Worked on full-stack features, optimized database queries, and improved API latency by 20%.</p>
+                    <h3>Teaching Assistant</h3>
+                    <p class="short">University of Oregon — Sept 2024 - April 2025</p>
+                    <p class="details"></p>
                 </div>
             </div>
 
             <div class="timeline-item">
                 <div class="timeline-content">
-                    <h3>Teaching Assistant</h3>
-                    <p class="short">University — 2022–2023</p>
-                    <p class="details">Led weekly lab sessions, graded assignments, and helped students understand algorithms.</p>
+                    <h3>Mathematics Paper Marker</h3>
+                    <p class="short">University of Oregon — March 2024 - June 2025</p>
+                    <p class="details">Graded homework assignments for Calculus III, Discrete Math I, and Statistics I</p>
                 </div>
             </div>
         </div>
     </section>
     
+    <section id="skills" class="hidden">
+        <h2 class="title">Skills</h2>
+        <div class="skills-wheel">
+            <ul id="skills-list">
+            <li>Python</li>
+            <li>C/C++</li>
+            <li>HTML/CSS</li>
+            <li>Javascript</li>
+            <li>Git</li>
+            <li>Mac/Linux/Windows</li>
+            </ul>
+        </div>
+    </section>
+
 </body>
 </html>
 
