--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
         </div>
     </section>
     
-    <section id="skills" class="hidden">
+    <!-- <section id="skills" class="hidden">
         <h2 class="title">Skills</h2>
         <div class="skills-wheel">
             <ul id="skills-list">
@@ -61,7 +61,7 @@
             <li>Mac/Linux/Windows</li>
             </ul>
         </div>
-    </section>
+    </section> -->
 
 </body>
 </html>
