home page edited

--- a/index.html
+++ b/index.html
@@ -35,7 +35,9 @@
                 <div class="timeline-content">
                     <h3>Teaching Assistant</h3>
                     <p class="short">University of Oregon — Sept 2024 - April 2025</p>
-                    <p class="details"></p>
+                    <p class="details">TA'd for Computer Science III and Introductory Programming and Problem-Solving.
+                        Helped students break down complex problems, debug code and optimize solutions.
+                    </p>
                 </div>
             </div>
 
