--- a/projects.html
+++ b/projects.html
@@ -29,7 +29,7 @@
                     <span>CSS</span>
                     <span>Javascript</span>
                 </div>
-                <a href="#" class="project-link">View Project Details</a>
+                <a href="https://anvovn.github.io/" class="project-link">View Project Details</a>
             </div>
             </div>
 
