Update timeline date for Teaching Assistant role

--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
                     <div class="timeline-content">
                         <div class="timeline-header">
                             <h3>Teaching Assistant</h3>
-                            <span class="timeline-date">Sept 2024 - April 2025</span>
+                            <span class="timeline-date">Sept 2024 - Present</span>
                         </div>
                         <p class="timeline-company">University of Oregon</p>
                         <p class="timeline-description">TA'd for Computer Science III and Introductory Programming and Problem-Solving. Helped students break down complex problems, debug code, and optimize solutions.</p>
